# s3-server

./: .env  .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  justfile
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml
examples/: hello-async-std.rs  hello-tokio.rs  s3.rs  test-s3.rs
scripts/: mint.sh  s3-auth.sh  s3-server.sh  s3.sh  wrk-hello.sh
src/: auth.rs  byte_stream.rs  chunked_stream.rs  compat.rs  dto.rs  error.rs  error_code.rs  errors.rs  header.rs  headers.rs  internal_macros.rs  lib.rs  macros.rs  multipart.rs  ops.rs  output.rs  path.rs  query.rs  s3_error_code.rs  s3_output.rs  s3_path.rs  s3_service.rs  s3_storage.rs  service.rs  signature_v4.rs  storage.rs  storages.rs  utils.rs
src/data_structures/: bytes_stream.rs  mod.rs  ordered_headers.rs  ordered_qs.rs
src/fs/: mod.rs  tokio_impl.rs
src/headers/: amz_content_sha256.rs  amz_copy_source.rs  amz_date.rs  authorization_v4.rs  mod.rs  range.rs
src/ops/: complete_multipart_upload.rs  copy_object.rs  create_bucket.rs  create_multipart_upload.rs  delete_bucket.rs  delete_object.rs  delete_objects.rs  get_bucket_location.rs  get_object.rs  head_bucket.rs  head_object.rs  list_buckets.rs  list_objects.rs  list_objects_v2.rs  put_object.rs  upload_part.rs
src/signature_v4/: presigned.rs
src/storage/: mod.rs
src/storages/: fs.rs  mod.rs
src/streams/: aws_chunked_stream.rs  mod.rs  multipart.rs
src/utils/: also.rs  apply.rs  async_stream.rs  body.rs  byte_stream.rs  crypto.rs  mod.rs  ordered_headers.rs  ordered_qs.rs  request.rs  response.rs  time.rs  xml.rs
tests/: basic.rs
tests/common/: mod.rs
tests/service/: main.rs  utils.rs
