[package]
name = "s3-server"
version = "0.2.0"
authors = ["Nugine <nugine@foxmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/datenlord/s3-server"
readme = "README.md"
description = "An experimental generic S3 server"
keywords = ["s3"]
categories = ["web-programming", "web-programming::http-server"]
rust-version = "1.59"

[features]
default = []
binary = [
    "anyhow", 
    "dotenv", 
    "structopt", 
    "tokio", 
    "tracing-subscriber"
]

[[bin]]
name = "s3-server"
required-features = ["binary"]

[dependencies]
anyhow = { version = "1.0.57", optional = true }
async-fs = "1.5.0"
async-trait = "0.1.53"
backtrace = "0.3.65"
base64 = "0.13.0"
chrono = "0.4.19"
const-str = { version = "0.3.1", features = ["verify-regex"] }
dotenv = { version = "0.15.0", optional = true }
futures = "0.3.21"
hex-simd = "0.5.0"
hmac = "0.12.1"
http = "0.2.7"
httparse = "1.7.0"
hyper = { version = "0.14.18", features = ["server"] }
md-5 = "0.10.1"
memchr = "2.4.1"
mime = "0.3.16"
nom = "7.1.1"
once_cell = "1.10.0"
path-absolutize = "3.0.13"
pin-project-lite = "0.2.8"
quick-xml = { version = "0.26.0", features = ["serialize"] }
regex = "1.5.5"
rusoto_core = "0.48.0"
rusoto_s3 = "0.48.0"
serde = "1.0.136"
serde_json = "1.0.79"
serde_urlencoded = "0.7.1"
sha2 = "0.10.2"
smallvec = "1.8.0"
structopt = { version = "0.3.26", optional = true }
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["full"], optional = true }
tracing = "0.1.34"
tracing-error = "0.2.0"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.11", optional = true, features = ["env-filter", "time"] }
transform-stream = "0.2.0"
urlencoding = "2.1.0"
uuid = { version = "1.0.0", features = ["v4"] }
xml-rs = "0.8.4"

[dev-dependencies]
tokio = { version = "1.17.0", features = ["full"] }
